# IkubChain

./: .gitignore  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  START_HERE.sh  docker-compose.yml
docs/: ARCHITECTURE.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/clubs/: page.tsx
frontend/app/clubs/[id]/: page.tsx
frontend/app/contribute/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/governance/: page.tsx
frontend/app/proposals/new/: page.tsx
frontend/components/: Navigation.tsx  WalletConnection.tsx
frontend/lib/: polkadot.ts
frontend/lib/services/: clubService.ts  proposalService.ts  treasuryService.ts  xcmService.ts
ikubchain-template/: Cargo.toml
ikubchain-template/src/: main.rs
ikubchain-template/src/cli/: mod.rs
ikubchain-template/src/command/: mod.rs
parachain/: Cargo.toml
parachain/node/: Cargo.toml
parachain/node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  runtime.rs  service.rs
parachain/pallets/ikub-analytics/: Cargo.toml
parachain/pallets/ikub-analytics/src/: lib.rs
parachain/pallets/ikub-crosschain/: Cargo.toml
parachain/pallets/ikub-crosschain/src/: lib.rs
parachain/pallets/ikub-disputes/: Cargo.toml
parachain/pallets/ikub-disputes/src/: lib.rs
parachain/pallets/ikub-governance/: Cargo.toml
parachain/pallets/ikub-governance/src/: lib.rs
parachain/pallets/ikub-members/: Cargo.toml
parachain/pallets/ikub-members/src/: lib.rs
parachain/pallets/ikub-treasury/: Cargo.toml
parachain/pallets/ikub-treasury/src/: lib.rs
parachain/runtime/: Cargo.toml
parachain/runtime/src/: constants.rs  lib.rs
parachain/src/: lib.rs
scripts/: build.sh  dev.sh
