[package]
name = "ikubchain-parachain"
version = "0.1.0"
description = "IkubChain - Decentralized Investment Club Platform on Polkadot"
authors = ["IkubChain Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ikubchain/ikubchain"

[workspace]
members = [
    "node",
    "pallets/*",
    "runtime",
]

[dependencies]
# Using specific versions from crates.io for better dependency resolution
frame-benchmarking = { version = "7.0.0", default-features = false, features = ["runtime-benchmarks"] }
frame-support = { version = "7.0.0", default-features = false }
frame-system = { version = "7.0.0", default-features = false }
sp-runtime = { version = "7.0.0", default-features = false }
sp-core = { version = "7.0.0", default-features = false }
sp-io = { version = "7.0.0", default-features = false }
sp-version = { version = "7.0.0", default-features = false }
sp-consensus-babe = { version = "0.10.0", default-features = false }
sp-keystore = { version = "0.41.1-rc1", default-features = false }
sp-timestamp = { version = "7.0.0", default-features = false }
sp-transaction-pool = { version = "7.0.0", default-features = false }


# Dummy lib to satisfy Cargo's requirement for at least one target
[lib]
name = "dummy"
path = "src/lib.rs"

[profile.release]
panic = "unwind"
codegen-units = 1
lto = true

