[package]
name = "ikubchain-node"
version = "0.1.0"
description = "IkubChain Node"
authors = ["IkubChain Team"]
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/ikubchain/ikubchain"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "ikubchain"
path = "src/main.rs"

[lib]
name = "ikubchain_runtime"
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-ikub-analytics/std",
    "pallet-ikub-crosschain/std",
    "pallet-ikub-disputes/std",
    "pallet-ikub-governance/std",
    "pallet-ikub-members/std",
    "pallet-ikub-treasury/std",
    "pallet-insecure-randomness-collective-flip/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
]

[dependencies]
# Local pallets
pallet-ikub-members = { path = "../pallets/ikub-members", default-features = false }
pallet-ikub-treasury = { path = "../pallets/ikub-treasury", default-features = false }
pallet-ikub-governance = { path = "../pallets/ikub-governance", default-features = false }
pallet-ikub-disputes = { path = "../pallets/ikub-disputes", default-features = false }
pallet-ikub-analytics = { path = "../pallets/ikub-analytics", default-features = false }
pallet-ikub-crosschain = { path = "../pallets/ikub-crosschain", default-features = false }

# Substrate dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false, optional = true }
frame-executive = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
