[package]
name = "ikubchain-runtime"
version = "0.1.0"
description = "IkubChain Runtime"
authors = ["IkubChain Team"]
edition = "2021"
license = "Apache-2.0"

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0", default-features = false }

[dependencies]
# Substrate
sp-api = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }

# Substrate FRAME
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false, optional = true }
frame-executive = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", package = "pallet-insecure-randomness-collective-flip", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }

# Polkadot
polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", rev = "6f991987c0b4cbbd7d4badc9ef08d83da5fefbfd", default-features = false }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot.git", rev = "6f991987c0b4cbbd7d4badc9ef08d83da5fefbfd", default-features = false }

# Cumulus
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus.git", rev = "f603a61ff370fc33740c9373833c3c6ba1486846", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus.git", rev = "f603a61ff370fc33740c9373833c3c6ba1486846", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus.git", rev = "f603a61ff370fc33740c9373833c3c6ba1486846", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus.git", rev = "f603a61ff370fc33740c9373833c3c6ba1486846", default-features = false }

# XCM
xcm = { git = "https://github.com/paritytech/polkadot.git", rev = "6f991987c0b4cbbd7d4badc9ef08d83da5fefbfd", package = "xcm", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot.git", rev = "6f991987c0b4cbbd7d4badc9ef08d83da5fefbfd", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot.git", rev = "6f991987c0b4cbbd7d4badc9ef08d83da5fefbfd", package = "xcm-executor", default-features = false }
pallet-xcm = { git = "https://github.com/paritytech/polkadot.git", rev = "6f991987c0b4cbbd7d4badc9ef08d83da5fefbfd", package = "pallet-xcm", default-features = false }

# IkubChain Pallets
pallet-ikub-governance = { path = "../pallets/ikub-governance", default-features = false }
pallet-ikub-treasury = { path = "../pallets/ikub-treasury", default-features = false }
pallet-ikub-crosschain = { path = "../pallets/ikub-crosschain", default-features = false }
pallet-ikub-members = { path = "../pallets/ikub-members", default-features = false }
pallet-ikub-disputes = { path = "../pallets/ikub-disputes", default-features = false }
pallet-ikub-analytics = { path = "../pallets/ikub-analytics", default-features = false }

# Serde
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-ikub-governance/runtime-benchmarks",
    "pallet-ikub-treasury/runtime-benchmarks",
]
std = [
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "frame-benchmarking/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-benchmarking/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-insecure-randomness-collective-flip/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "polkadot-parachain/std",
    "polkadot-runtime-common/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-pallet-xcmp-queue/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-parachain-inherent/std",
    "xcm/std",
    "xcm-executor/std",
    "pallet-xcm/std",
    "pallet-ikub-governance/std",
    "pallet-ikub-treasury/std",
    "pallet-ikub-crosschain/std",
    "pallet-ikub-members/std",
    "pallet-ikub-disputes/std",
    "pallet-ikub-analytics/std",
    "serde",
]

