[package]
name = "pallet-ikub-treasury"
version = "0.1.0"
description = "IkubChain Treasury Pallet - Multi-signature treasury operations"
authors = ["IkubChain Team"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0", default-features = false, optional = true }
frame-support = { version = "4.0.0", default-features = false }
frame-system = { version = "4.0.0", default-features = false }
sp-runtime = { version = "6.0.0", default-features = false }
sp-std = { version = "4.0.0", default-features = false }
sp-core = { version = "6.0.0", default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
std = [
    "codec/std",
    "scale-info/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
]

