[package]
name = "pallet-ikub-treasury"
version = "0.1.0"
description = "IkubChain Treasury Pallet - Multi-signature treasury operations"
authors = ["IkubChain Team"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", rev = "ff24c60ac7d9f87727ecdd0ded9a80c56e4f4b65", default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
std = [
    "codec/std",
    "scale-info/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "pallet-balances/std",
]

